# MRA-components

./: .gitignore  BUILD  CMakeLists.txt  INTEGRATION-BAZEL.md  LICENSE  MRA-build.py  MRA-codegen.py  MRA-logger.py  MRA-tickbin.py  MRA-traceview.py  README.md  WORKSPACE.bazel  pixi.toml
components/common/mra_action_base/: CMakeLists.txt  package.xml
components/common/mra_tracing/: CMakeLists.txt  package.xml
components/falcons/: CMakeLists.txt
components/falcons/action_aimed_kick/: BUILD  CMakeLists.txt  FalconsActionAimedKick.hpp  FalconsActionAimedKick_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_base/: CMakeLists.txt  package.xml
components/falcons/action_catch/: BUILD  CMakeLists.txt  FalconsActionCatch.hpp  FalconsActionCatch_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_catch_ball/: BUILD  CMakeLists.txt  FalconsActionCatchBall.hpp  FalconsActionCatchBall_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_fetch_ball/: CMakeLists.txt  FalconsActionFetchBall.hpp  FalconsActionFetchBall_datatypes.hpp  package.xml  test.cpp  tick.cpp
components/falcons/action_fetch_ball_old/: BUILD  tick.cpp
components/falcons/action_get_ball/: BUILD  CMakeLists.txt  FalconsActionGetBall.hpp  dependencies  package.xml  tick.cpp
components/falcons/action_get_ball_old/: FalconsActionGetBall_datatypes.hpp  test.cpp
components/falcons/action_getball/: CMakeLists.txt  package.xml
components/falcons/action_keeper/: BUILD  CMakeLists.txt  FalconsActionKeeper.hpp  FalconsActionKeeper_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_move/: BUILD  CMakeLists.txt  FalconsActionMove.hpp  FalconsActionMove_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_park/: BUILD  CMakeLists.txt  FalconsActionPark.hpp  FalconsActionPark_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_pass/: BUILD  CMakeLists.txt  FalconsActionPass.hpp  FalconsActionPass_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_planning/: BUILD  CMakeLists.txt  FalconsActionPlanning.hpp  FalconsActionPlanning_datatypes.hpp  README.md  action_planning_node.cpp  dependencies  package.xml  test.cpp  tick.cpp
components/falcons/action_planning_old/: FalconsActionPlanning_datatypes.hpp  tick.cpp
components/falcons/action_shield/: BUILD  CMakeLists.txt  FalconsActionShield.hpp  FalconsActionShield_datatypes.hpp  test.cpp  tick.cpp
components/falcons/action_stop/: BUILD  CMakeLists.txt  FalconsActionStop.hpp  FalconsActionStop_datatypes.hpp  README.md  test.cpp  tick.cpp
components/falcons/configuration/: CMakeLists.txt  package.xml
components/falcons/falcons_msgs/: CMakeLists.txt  package.xml
components/falcons/getball/: CMakeLists.txt  FalconsGetball.hpp  FalconsGetball_datatypes.hpp  tick.cpp
components/falcons/getball_fetch/: CMakeLists.txt  FalconsGetballFetch.hpp  test.cpp  tick.cpp
components/falcons/getball_intercept/: CMakeLists.txt  FalconsGetballIntercept.hpp  tick.cpp
components/falcons/joystick/: BUILD  falcons_interface.py  joystick.json  joystick.py  joystick_controller.py  joystick_core.py  joystick_falcons.py  joystick_pygame.py  keyboard.py  mra_interface.py  terminal.py  tracing.py
components/falcons/localization_vision/: CMakeLists.txt  FalconsLocalizationVision.hpp  FalconsLocalizationVision_datatypes.hpp  README.md  test.cpp  tick.cpp
components/falcons/motion_planning/: BUILD  CMakeLists.txt  FalconsMotionPlanning.hpp  FalconsMotionPlanning_datatypes.hpp  dependencies  test.cpp  tick.cpp
components/falcons/setpoint_calculation/: CMakeLists.txt  package.xml
components/falcons/teamplay/: CMakeLists.txt  package.xml
components/falcons/test_mra_logger/: CMakeLists.txt  FalconsTestMraLogger.hpp  test.cpp  tick.cpp
components/falcons/trajectory_generation/: CMakeLists.txt  FalconsTrajectoryGeneration.hpp  tick.cpp
components/falcons/velocity_control/: BUILD  CMakeLists.txt  FalconsVelocityControl.hpp  FalconsVelocityControl_datatypes.hpp  dependencies  package.xml  test.cpp  test_velocity_control.cpp  tick.cpp
components/falcons/world_model/: CMakeLists.txt  README.md  package.xml
components/msl_msgs/: CMakeLists.txt  package.xml
components/msl_msgs/msg/: WorldState.msg
components/robotsports/: CMakeLists.txt
components/robotsports/getball_fetch/: CMakeLists.txt  RobotsportsGetballFetch.hpp  test.cpp  tick.cpp
components/robotsports/getball_intercept/: CMakeLists.txt  RobotsportsGetballIntercept.hpp  tick.cpp
components/robotsports/local_ball/: BUILD  CMakeLists.txt  README.adoc  RobotsportsLocalBall.hpp  RobotsportsLocalBall_datatypes.hpp  State.proto  dependencies  test.cpp  tick.cpp
components/robotsports/local_ball_preprocessor/: BUILD  CMakeLists.txt  README.adoc  RobotsportsLocalBallPreprocessor.hpp  RobotsportsLocalBallPreprocessor_datatypes.hpp  test.cpp  tick.cpp
components/robotsports/local_ball_tracking/: BUILD  CMakeLists.txt  README.adoc  RobotsportsLocalBallTracking.hpp  RobotsportsLocalBallTracking_datatypes.hpp  RobotsportsLocalBallTracking_native_filter.cpp  RobotsportsLocalBallTracking_native_filter.hpp  RobotsportsLocalBallTracking_preprocessing.cpp  RobotsportsLocalBallTracking_preprocessing.hpp  RobotsportsLocalBallTracking_sequence_clustering.cpp  (+19 more)
libraries/: CMakeLists.txt
libraries/geometry/: BUILD  CMakeLists.txt  angles.cpp  angles.hpp  geometry.hpp  intersect.cpp  intersect.hpp  point.cpp  point.hpp  pose.cpp  pose.hpp  position.cpp  position.hpp  test-intersect.cpp  test-point.cpp  test-pose.cpp  tmp_vector2d.hpp  velocity.cpp  velocity.hpp
libraries/logging/: BUILD  CMakeLists.txt  backend.cpp  backend.hpp  check_logfolder.py  control.cpp  control.hpp  dummies.hpp  levels.hpp  logdata.py  logdebug.hpp  logging.hpp  logtick.hpp  macros.hpp  tprintf.cpp
libraries/opencv_utils/: CMakeLists.txt
libraries/plotting/: BUILD  __init__.py  ball.py  field.py  obstacle.py  robot.py  target.py  transform.py  worldstate.py
libraries/ruckig/: BUILD  CMakeLists.txt
third-party-libraries/: CMakeLists.txt
third-party-libraries/ruckig/: README.md
(+935 files in other folders)
