workspace(name = "MRA")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")


# JSON
# https://github.com/nlohmann/json
http_archive(
    name = "nlohmann_json",
    build_file = "//dependencies/bazel:BUILD.nlohmann_json",
    sha256 = "b1b92b169e42b5dc2a51b644ba3b3a414e2451d580331d43801244c7e863f060",
    strip_prefix = "json-a6ee8bf9d94ef783f21f955d4125d5f3924d2c8e",
    urls = ["https://github.com/nlohmann/json/archive/a6ee8bf9d94ef783f21f955d4125d5f3924d2c8e.tar.gz"],
    workspace_file_content = 'workspace(name = "nlohmann_json")',
)

# fmt library, which is a dependency of spdlog
git_repository(
    name = "fmt",
    branch = "master",
    remote = "https://github.com/fmtlib/fmt",
    patch_cmds = [
        "mv support/bazel/.bazelversion .bazelversion",
        "mv support/bazel/BUILD.bazel BUILD.bazel",
        "mv support/bazel/WORKSPACE.bazel WORKSPACE.bazel",
    ],
)

# spdlog
http_archive(
    name = "gabime_spdlog",
    url = "https://github.com/gabime/spdlog/archive/v1.11.0.tar.gz",
    strip_prefix = "spdlog-1.11.0",
    build_file = "//dependencies/bazel:BUILD.gabime_spdlog",
    sha256 = "ca5cae8d6cac15dae0ec63b21d6ad3530070650f68076f3a4a862ca293a858bb",
)

# gtest
# https://github.com/google/googletest
http_archive(
  name = "com_google_googletest",
  sha256 = "b976cf4fd57b318afdb1bdb27fc708904b3e4bed482859eb94ba2b4bdd077fe2",
  urls = ["https://github.com/google/googletest/archive/f8d7d77c06936315286eb55f8de22cd23c188571.zip"],
  strip_prefix = "googletest-f8d7d77c06936315286eb55f8de22cd23c188571",
)

# opencv (as system dependency!)
new_local_repository(
    name = "opencv",
    path = "/usr",
    build_file = "dependencies/bazel/BUILD.opencv",
)

# pybind11
# See https://github.com/pybind/pybind11_bazel
http_archive(
    name = "pybind11_bazel",
    sha256 = "ca401da77da9712bb585595796c4d8ec5253e55292f5ecf7773db1b33b26715e",
    strip_prefix = "pybind11_bazel-fd7d88857cca3d7435b06f3ac6abab77cd9983b2",
    urls = ["https://github.com/pybind/pybind11_bazel/archive/fd7d88857cca3d7435b06f3ac6abab77cd9983b2.zip"],
)
http_archive(
    name = "pybind11",
    build_file = "@pybind11_bazel//:pybind11.BUILD",
    sha256 = "d475978da0cdc2d43b73f30910786759d593a9d8ee05b1b6846d1eb16c6d2e0c",
    strip_prefix = "pybind11-2.11.1",
    urls = ["https://github.com/pybind/pybind11/archive/v2.11.1.tar.gz"],
)

load("@pybind11_bazel//:python_configure.bzl", "python_configure")
python_configure(name = "local_config_python")

# Google protobuf
# https://protobuf.dev/
http_archive(
    name = "com_google_protobuf",
    sha256 = "4e176116949be52b0408dfd24f8925d1eb674a781ae242a75296b17a1c721395",
    strip_prefix = "protobuf-23.3",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/refs/tags/v23.3.tar.gz"],
    # note: on Ubuntu20, opencv DNN libraries depend on an older conflicting protobuf version
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# GRPC, for proto rules.
# https://grpc.io/
# For a related discussion of the pro/cons of various open-source py proto rule
# repositories, see b/189457935.
http_archive(
    name = "com_github_grpc_grpc",
    sha256 = "9a273c49ec22a0d29376a32c158deefce6d3569ac9773e5a5376608d62cdf8a0",
    strip_prefix = "grpc-1.57.0",
    urls = ["https://github.com/grpc/grpc/archive/v1.57.0.zip"],
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

bind(
    name = "python_headers",
    actual = "@local_config_python//:python_headers",
)

# Pybind11 + Protobuf integration
git_repository(
    name = "pybind11_protobuf",
    commit = "b2e7687baf5773cfafcea12d6928991605b14b0d", # 2023-08-11
    remote = "https://github.com/pybind/pybind11_protobuf.git",
)

# extendedlogging python library for traceviewer and python autologging
git_repository(
    name = "extendedlogging",
    remote = "https://github.com/janfeitsma/extendedlogging.git",
    commit = "9e969e3b4dee599c506d8603f0e46edbd53a0f5f",
    build_file = "//dependencies/bazel:BUILD.extendedlogging",
)

